--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,40 +1,51 @@
-{% load static %}
-<html>
-    <head>
+{% extends 'nav.html'%}
+{% block home %}
+    {%load static%}
+    
         
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    </head>
-    <body>
-        
-        <div class="container">
+        <div class="container-fluid" style="margin-top: 30px; background-color : "#81ecec" ">
+            <div class="row">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4">
+                    <div class="card shadow-lg border-dark " style="width:">
+                        <div class="card-body card-style">
+                            <h5 class="card-title">Create Your Free Account</h5>
+                            
+                            <form action="/signup/" method="POST">
+                                {% csrf_token %}
+                                
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1">Username</label>
+                                    <input type="text" name="username" placeholder="Username" class="form-control" required="true"></div>
+                                    
+                                    <div class="form-group">
+                                        <label for="exampleFormControlInput2">Email</label>
+                                        <input type="email" name="email" placeholder="Email" class="form-control" required="true"></div>
+                                        
+                                        <div class="form-group ">
+                                            <label for="exampleFormControlInput3">Password</label>
+                                            <input type="password" name="password" placeholder="Password" class="form-control" required="true"></div>
+                                            
+                                            <div class="form-group ">
+                                                <label for="exampleFormControlInput4">Account Type</label>
+                                                <select name="users" class="form-control">
+                                                    <option value="O" >Owner</option>
+                                                    <option value="T">Tenant</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group col-sm-20 ">
+
+                                                <input type="submit" class="btn btn-success" value="Sign Up" style>
+                                            </div>
+                            </form>
+                                        <h6 class="card-subtitle mb-2 text-muted">Already have an account? <br>Please <a href="/login/" class="card-link">Sign In</a></h6>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             
-            
-            <h2>Signup</h2>
-            <p>Please enter your details</p>
-            
-            <form method="post" action="{% url 'signup' %}" id="Signup">
-                {% csrf_token %}
-                
-                <input type="text" name="username" placeholder="username"><br>
-                
-                
-                <input type="email" name="email" placeholder="email"><br>
-                
-                
-                <input type="password" name="password" placeholder="password"><br>
-                
-                
-                <input type="submit" name="Create account" value="Create account" />
-                
-                <p>Already an user!<a href="{% url 'signin' %}">Login</a></p>
-                
-            </form>
         </div>
-        
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </body>
-</html>
+
+{% endblock %}
